프론트에서 요구한 사항들 추가
